--- a/ci/test/pixi.toml
+++ b/ci/test/pixi.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-xarray = ">=2025.12.0"
-pandas = ">=2.3"
-python = ">=3.9"
+python = "*"
+numpy = "*"
+pandas = "*"
+xarray = "*"
