--- a/ci/test/pixi.toml
+++ b/ci/test/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["Vecko <36369090+VeckoTheGecko@users.noreply.github.com>"]
 channels = ["conda-forge"]
 name = "test"
-platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
+platforms = ["win-64", "linux-64", "osx-64", "osx-arm64", "linux-aarch64"]
 version = "0.1.0"
 
 [tasks]
