--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
           path: create-pixi-lock
 
       - name: Copy test files to working directory
+        shell: bash
         run: cp -r create-pixi-lock/ci/test/* .
 
       - name: Run create-pixi-lock action
@@ -33,6 +34,7 @@ jobs:
           cache-frequency: ${{ matrix.cache-frequency }}
 
       - name: Verify pixi.lock exists
+        shell: bash
         run: |
           if [ -f "pixi.lock" ]; then
             echo "pixi.lock exists"
@@ -45,6 +47,7 @@ jobs:
         uses: prefix-dev/setup-pixi@v0.9.3
 
       - name: Verify environment installed
+        shell: bash
         run: |
           if [ -d ".pixi/envs/default" ]; then
             echo "Environment installed successfully"
