--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  PIXI_VERSION: "v0.63.0"
+
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -32,6 +35,7 @@ jobs:
         uses: ./create-pixi-lock
         with:
           cache-frequency: ${{ matrix.cache-frequency }}
+          pixi-version: ${{ env.PIXI_VERSION }}$
 
       - name: Verify pixi.lock exists
         shell: bash
@@ -45,6 +49,9 @@ jobs:
 
       - name: Setup pixi and install environment
         uses: prefix-dev/setup-pixi@v0.9.3
+        with:
+          pixi-version: ${{ env.PIXI_VERSION }}$
+
 
       - name: Verify environment installed
         shell: bash
