--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         uses: ./create-pixi-lock
         with:
           cache-frequency: ${{ matrix.cache-frequency }}
-          pixi-version: ${{ env.PIXI_VERSION }}$
+          pixi-version: ${{ env.PIXI_VERSION }}
 
       - name: Verify pixi.lock exists
         shell: bash
@@ -50,7 +50,7 @@ jobs:
       - name: Setup pixi and install environment
         uses: prefix-dev/setup-pixi@v0.9.3
         with:
-          pixi-version: ${{ env.PIXI_VERSION }}$
+          pixi-version: ${{ env.PIXI_VERSION }}
 
 
       - name: Verify environment installed
