--- a/create-and-cache/action.yml
+++ b/create-and-cache/action.yml
@@ -14,9 +14,6 @@ outputs:
   cache-key:
     description: "The cache key used"
     value: ${{ steps.cache-key.outputs.key }}
-  fallback-key:
-    description: "The fallback cache key (yesterday's date)"
-    value: ${{ steps.cache-key.outputs.fallback-key }}
 
 runs:
   using: "composite"
@@ -26,10 +23,8 @@ runs:
       shell: bash
       run: |
         today=$(date +'%Y-%m-%d')
-        yesterday=$(date -d 'yesterday' +'%Y-%m-%d' 2>/dev/null || date -v-1d +'%Y-%m-%d')
-        base="pixi-lock_${{ inputs.pixi-version }}_${{ hashFiles('pixi.toml') }}"
-        echo "key=${base}_${today}" >> "$GITHUB_OUTPUT"
-        echo "fallback-key=${base}_${yesterday}" >> "$GITHUB_OUTPUT"
+        key="pixi-lock_${{ inputs.pixi-version }}_${{ hashFiles('pixi.toml') }}_${today}"
+        echo "key=${key}" >> "$GITHUB_OUTPUT"
 
     - name: Restore pixi.lock from cache
       uses: actions/cache/restore@v5
