--- a/create-and-cache/action.yml
+++ b/create-and-cache/action.yml
@@ -27,14 +27,14 @@ runs:
         echo "key=${key}" >> "$GITHUB_OUTPUT"
 
     - name: Restore pixi.lock from cache
-      uses: actions/cache/restore@v5
+      uses: actions/cache/restore@8b402f58fbc84540c8b491a91e594a4576fec3d7 # v5.0.2
       id: restore
       with:
         path: pixi.lock
         key: ${{ steps.cache-key.outputs.key }}
 
     - name: Setup pixi
-      uses: prefix-dev/setup-pixi@v0.9.3
+      uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
       if: ${{ !steps.restore.outputs.cache-hit }}
       with:
         pixi-version: ${{ inputs.pixi-version }}
@@ -46,7 +46,7 @@ runs:
       run: pixi lock
 
     - name: Save pixi.lock to cache
-      uses: actions/cache/save@v5
+      uses: actions/cache/save@8b402f58fbc84540c8b491a91e594a4576fec3d7 # v5.0.2
       if: ${{ !steps.restore.outputs.cache-hit }}
       with:
         path: pixi.lock
