--- a/restore/action.yml
+++ b/restore/action.yml
@@ -22,7 +22,7 @@ runs:
         echo "key=${base}_${yesterday}" >> "$GITHUB_OUTPUT"
 
     - name: Restore pixi.lock from cache
-      uses: actions/cache/restore@v5
+      uses: actions/cache/restore@8b402f58fbc84540c8b491a91e594a4576fec3d7 # v5.0.2
       id: restore
       with:
         path: pixi.lock
