--- a/create-and-cache/action.yml
+++ b/create-and-cache/action.yml
@@ -32,6 +32,7 @@ runs:
       with:
         path: pixi.lock
         key: ${{ steps.cache-key.outputs.key }}
+        enableCrossOsArchive: true
 
     - name: Setup pixi
       uses: prefix-dev/setup-pixi@82d477f15f3a381dbcc8adc1206ce643fe110fb7 # v0.9.3
