--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,24 @@ env:
   PIXI_VERSION: "v0.63.0"
 
 jobs:
-  # TODO: Add a job that clears the GitHub cache
+  clear-cache:
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - name: Clear pixi-lock cache entries
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          echo "Clearing pixi-lock-* cache entries"
+          gh cache list --repo ${{ github.repository }} --json key --jq '.[].key' | grep '^pixi-lock-' | while read -r key; do
+            echo "Deleting cache: $key"
+            gh cache delete "$key" --repo ${{ github.repository }}
+          done
+          echo "Cache cleared"
+
   cache-pixi-lock:
+    needs: clear-cache
     runs-on: ubuntu-latest
     outputs:
       cache-key: ${{ steps.create-and-cache.outputs.cache-key }}
