--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           echo "Clearing pixi-lock-* cache entries"
-          gh cache list --repo ${{ github.repository }} --json key --jq '.[].key' | grep '^pixi-lock-' | while read -r key; do
+          gh cache list --repo ${{ github.repository }} --json key --jq '.[].key' | grep '^pixi-lock_' | while read -r key; do
             echo "Deleting cache: $key"
             gh cache delete "$key" --repo ${{ github.repository }}
           done
