--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,21 @@ jobs:
           echo "Clearing pixi-lock-* cache entries"
           gh cache list --repo ${{ github.repository }} --json key --jq '.[].key' | grep '^pixi-lock_' | while read -r key; do
             echo "Deleting cache: $key"
-            gh cache delete "$key" --repo ${{ github.repository }}
+            for attempt in 1 2 3; do
+              if gh cache delete "$key" --repo ${{ github.repository }}; then
+                break
+              fi
+              echo "Attempt $attempt failed, retrying in 5 seconds..."
+              sleep 5
+            done
           done
+          echo "Verifying all caches are cleared..."
+          remaining=$(gh cache list --repo ${{ github.repository }} --json key --jq '.[].key' | grep '^pixi-lock_' || true)
+          if [ -n "$remaining" ]; then
+            echo "Error: Some caches still exist:"
+            echo "$remaining"
+            exit 1
+          fi
           echo "Cache cleared"
 
   cache-pixi-lock:
