--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,10 @@ jobs:
   cache-pixi-lock:
     needs: clear-cache
     runs-on: ubuntu-slim
+    strategy:
+      fail-fast: false
+      matrix:
+        test-folder: [just-pixi-toml, just-pyproject-toml, pyproject-and-pixi-toml]
     outputs:
       cache-key: ${{ steps.create-and-cache.outputs.cache-key }}
       pixi-version: ${{ steps.create-and-cache.outputs.pixi-version }}
@@ -58,7 +62,7 @@ jobs:
 
       - name: Copy test files to working directory
         shell: bash
-        run: cp -r pixi-lock/ci/test/* .
+        run: cp -r pixi-lock/ci/test/${{ matrix.test-folder }}/* .
 
       - name: Run create-and-cache action
         id: create-and-cache
@@ -83,6 +87,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-slim, macos-latest, windows-latest]
+        test-folder: [just-pixi-toml, just-pyproject-toml, pyproject-and-pixi-toml]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -91,7 +96,7 @@ jobs:
 
       - name: Copy test files to working directory
         shell: bash
-        run: cp -r pixi-lock/ci/test/* .
+        run: cp -r pixi-lock/ci/test/${{ matrix.test-folder }}/* .
 
       - name: Restore pixi.lock from cache
         uses: ./pixi-lock/restore
