Update default for hash-files
Bracket notation isn't supported, but hashfiles accepts input split by newlines

https://www.npmjs.com/package/@actions/glob#patterns

--- a/create-and-cache/action.yml
+++ b/create-and-cache/action.yml
@@ -9,7 +9,9 @@ inputs:
   hash-files:
     description: "Files to use to generate the hash key for the lock file."
     required: false
-    default: "{pixi.toml,pyproject.toml}"
+    default: |
+      pixi.toml
+      pyproject.toml
 
 outputs:
   pixi-version:
